# ANN

./: LICENSE  setup
CNN/: CMakeLists.txt  tangent.cpp
Catch2/lib/cmake/Catch2/: Catch2ConfigVersion.cmake  Catch2Targets.cmake
Catch2/share/pkgconfig/: catch2-with-main.pc  catch2.pc
Eigen/share/eigen3/cmake/: Eigen3Config.cmake  Eigen3ConfigVersion.cmake
Eigen/share/pkgconfig/: eigen3.pc
RNN/: CMakeLists.txt  rnn_test.cpp
RNN/rnn/: CMakeLists.txt  end_io_net.cpp  end_io_net.hpp  gru_cell.cpp  gru_cell.hpp  predict_end_net.cpp  predict_end_net.hpp  predict_end_net_test.cpp  predict_sequence_net.cpp  predict_sequence_net.hpp
RNN/rnn/generic/: CMakeLists.txt  activity.cpp  rand.cpp  rnn_type.hpp
